Att animate-appear

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     </header>
     
     <!--Seção para conter o menu navegável-->
-    <section id="menu" class="flex justify-center w-full pb-6 hidden animate-appear bg-main-light">
+    <section id="menu" class="flex justify-center w-full pb-6 hidden bg-main-light">
     <nav>
-        <ul class="flex flex-col gap-4 text-center text-main-brown text-xl uppercase">
+        <ul class="flex flex-col gap-4 text-center text-main-brown animate-appear text-xl uppercase">
             <li><a href="#">Página Inicial</a></li>
             <li><a href="#">Produtos</a></li>
             <li><a href="#">Contato</a></li>
