Att main-text para responsividade

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         </figure>
 
-        <div id="main-text" class="flex flex-col items-center gap-8 pt-16 absolute top-0">
+        <div id="main-text" class="w-full flex flex-col items-center gap-8 pt-16 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
             <h3 class="font-bold text-lg">Natal 2023</h3>
             
             <h1 class="font-bold text-2xl">Cardápio especial</h1>
