Att links para rodar no server

--- a/static/index.html
+++ b/static/index.html
@@ -44,7 +44,7 @@
     <section id="menu" class="flex justify-center w-full p-6 hidden bg-main-light border-t-2 border-main-brown">
     <nav>
         <ul class="flex flex-col gap-4 text-center text-main-brown animate-appear text-xl uppercase">
-            <li><a href="index.html">Página Inicial</a></li>
+            <li><a href="/">Página Inicial</a></li>
             <li><a href="produtos.html">Produtos</a></li>
             <li><a href="#contato">Contato</a></li>
         </ul>
